2010-08-01 Roman
- !!!:UI.VCAEngine: New session's user-API functions for links link() and linkSet() is added.
    Links info for run sessions' widgets is added. Default text synth string is updated.
- !!:UI.Vision: Atrribute and link value copy is added to context menu for attribute and link inspectors.


2010-07-30 Maxim
- SYS: Syntax error in word "attribute" is fixed everywhere.
- !!!:DB: Module for base realization of DB PostgreSQL is added.
 

2010-07-29 Roman
- DAQ: Redundant task period type is changed to real type.
- SYS: License version for all modules is changed to GPL2.
- !!!:UI.VCAEngine: New session's user-API functions wdgAdd() and wdgDel() is added.
    Return for attrSet() is changed to current object.
- UI.QTCfg: Status bar messages history display is added.


2010-07-24 Roman
- SYS: Tooltip help message is added to task manager for use CPU set.
- UI.VCAEngine: Widget enable message is updated.


2010-07-23 Roman
- SYS: OpenSCADA start script is changed for split check for ~/.openscada directory items present.
- !:DAQ.JavaLikeCalc: Variable's type check is full disable on compile for unary and binary operations.


2010-07-16 Roman
- FIX:DAQ.DCON: Attributes of parameter deletion is fixed at a paramter second enable.


2010-07-15 Roman
- FIX:SYS, Special.FLibSYS: User API functions SYS.cntrReq() and Special.FLibSYS.xmlCntrReq() is fixed for remote station requests.
- !:FIX:Special.Complex1: User API function "PID" is fixed for minimum scale border correct support.
- !:DAQ.BlockCalc: Constant attributes support is added to DAQ parameters.


2010-07-13 Roman
- !!:SYS: CPU affinity set for OpenSCADA threads at multiply CPU systems is added. Added into task manager.
- !!:SYS: OpenSCADA tasks wrapper is added for some specific function allow. Added TID to task manager.
    Added "TError" exeption processing for tasks into wrapper.
- DAQ.JavaLikeCalc: Type copy at compile mode for automatic variables is added.