@@ -1,7 +1,7 @@
 
 //OpenSCADA system module BD.PostgreSQL file: postgre.h
 /***************************************************************************
- *   Copyright (C) 2010 by Maxim Lisenko                                   *
+ *   Copyright (C) 2010 by Maxim Lysenko                                   *
  *   mlisenko@oscada.org                                                   *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
